# rust-chat

./: Cargo.toml  README.md  run_server.sh
chat-client/: Cargo.toml
chat-client/src/: chat.rs  lib.rs  main.rs  server_api.rs  setup.rs  user_data.rs
chat-core/: Cargo.toml
chat-core/src/: lib.rs  requests.rs  x3dh.rs
chat-server/: Cargo.toml
chat-server/src/: chat.rs  endpoints.rs  lib.rs  login.rs  main.rs  services.rs
chat-server/src/services/: user.rs  user_service.rs
src/: lib.rs  main.rs  requests.rs
