[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
] }
uuid = { version = "1.2.1", features = ["v4", "fast-rng"] }
tokio-stream = "0.1.11"
