[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
] }
uuid = { version = "1.2.1", features = ["v4", "fast-rng"] }
tokio-stream = "0.1.11"
websockets = "0.3.0"
signal-hook = "0.3.14"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
futures = "0.3.25"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
clap = { version = "4.0.18", features = ["derive"] }
derive-getters = "0.2.0"
