[package]
name = "chat-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chat-core = { path = "../chat-core" }
clap = { version = "4.0.18", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
signal-hook = "0.3.14"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
futures = "0.3.25"
websockets = "0.3.0"
reqwest = "0.11.12"
uuid = { version = "1.2.1", features = ["v4", "fast-rng"] }
derive-getters = "0.2.0"
dryoc = { version = "0.4.0" }
hex = "0.4.3"
