[package]
name = "chat-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-getters = "0.2.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
dryoc = { version = "0.4.0", features = ["serde"] }
uuid = { version = "1.2.1", features = ["v4", "fast-rng", "serde"] }
