[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chat-core = { path = "../chat-core" }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.11"
warp = "0.3"
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
] }
uuid = { version = "1.2.1", features = ["v4", "fast-rng"] }
derive-getters = "0.2.0"
serde_json = "1.0.87"
dryoc = { version = "0.4.0" }
